Fix Android preview capture via HardwareRenderingScreenshot
The `view.draw(Canvas(bitmap))` path renders Compose's RenderNode-recorded
fills as 1-pixel outlines under `GraphicsMode.NATIVE`. Capture now goes
through `HardwareRenderingScreenshot.takeScreenshot` (reached via reflection
so we bypass `PixelCopy`'s `canHaveDisplayList` gate, which Robolectric
doesn't satisfy), producing pixel-accurate renders that match the Desktop
reference.

- Pin Robolectric SDK to 34 via `@Config(sdk = [34])` — 4.16.1's
  `ShadowNativeImageReaderSurfaceImage.nativeCreatePlanes` is capped at
  `maxSdk=UPSIDE_DOWN_CAKE`, so API 35+ yields `Image.planes[0] == null`.
- `Theme_Material_Light_NoActionBar` + `ComposeView` forced to `MATCH_PARENT`
  so `fillMaxSize()` resolves to the viewport instead of 200dp wrap-content.
- `setFlags(FLAG_HARDWARE_ACCELERATED, FLAG_HARDWARE_ACCELERATED)` before
  `visible()` so AndroidComposeView sees the flag on first attach.
- Add `--add-opens=java.base/java.nio=ALL-UNNAMED` to the `renderPreviews`
  JVM args for Wear curved text's `PathIterator` → `VMRuntime` reflection.
- Drop the now-obsolete `src/main/resources/robolectric.properties` and
  stale `robolectric.screenshot.hwrdr.native` sysprop.